Fix tags overflow and Tool Desc line height

--- a/src/tool-item/Tool-item.css
+++ b/src/tool-item/Tool-item.css
@@ -19,6 +19,11 @@
     word-break: break-word;
 }
 
-.Tool-description {
+.Tool-item__description {
     margin-top: 0.4em;
+    line-height: 1.3;
+}
+
+.Tool-item__tags > * {
+    display: inline-block;
 }
